--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
 html {
   background-color: #c9b5ab;
 }
+
+nav ol {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.large {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+h1 {
+  font-weight: bold;
+}
