--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
 html {
   background-color: #c9b5ab;
+  line-height: 1.5;
 }
 
 nav ol {
   font-size: 1.5rem;
   font-weight: bold;
+  color: #8f2440;
 }
 
 .large {
@@ -28,6 +30,7 @@ figcaption {
 blockquote {
   font-size: 1.5rem;
   font-style: italic;
+  font-weight: bolder;
 }
 
 .serving {
