--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,10 @@ main {
   font-family: 'PT Serif', serif;
 }
 
-viewport width {
-  75vw;
+.bullets {
+  list-style-type: circle;
+}
+
+.alphas {
+  list-style-type: lower-greek;
 }
