--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html {
 }
 
 nav ol {
-  font-size: 1.5rem;
+  font-size: 1.125rem;
   font-weight: bold;
   color: #8f2440;
   font-family: "PT Sans", sans-serif;
@@ -14,17 +14,18 @@ nav ol {
 
 .large {
   font-size: 1.125rem;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 h1 {
   font-weight: bold;
   font-family: "PT Sans", sans-serif;
   color: #3f1622;
+  font-size: 1.5rem;
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 1.125rem;
   font-weight: bold;
   font-family: "PT Sans", sans-serif;
   color: #3f1622;
@@ -32,10 +33,11 @@ h2 {
 
 figcaption {
   font-style: italic;
+  font-size: 0.8rem;
 }
 
 blockquote {
-  font-size: 1.5rem;
+  font-size: 1.125rem;
   font-style: italic;
   font-weight: bolder;
 }
